--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A5-M2</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro de Animais</title>
+  <link rel="stylesheet" href="style.css"> <!-- Referência ao seu arquivo CSS -->
 </head>
 <body>
-    <!-- placeholder descrição em cinza -->
-    <input type="text" name="img" id="input-img" placeholder="link de uma imagem">
-    <input type="text" name="otherImg" id="input-otherImg" placeholder="outro link de imagem">
-    <input type="text" name="title" id="input-title" placeholder="titulo do produto">
-    <input type="text" name="description" id="input-description" placeholder="descrição do produto">
-    <input type="text" name="price" id="input-price" placeholder="preço atual do produto">
-    <input type="text" name="oldPrice" id="input-oldPrice" placeholder="preço antigo do produto">
-    <input type="text" name="status" id="input-status" placeholder="status do produto">
-    <button id="btn-save">Salvar</button>
-    <button id="btn-list">listar</button>
-    <div id="container-list">
-        <ul class="ulList" id="product-list">
-            
-        </ul>
-    </div>
-    <script src="script.js"></script>
+  <!-- Seu formulário de cadastro de animais -->
+  <input id="input-name" placeholder="Nome do animal">
+  <input id="input-breed" placeholder="Raça">
+  <input id="input-age" placeholder="Idade">
+  <input id="input-sex" placeholder="Sexo">
+  <input id="input-weight" placeholder="Peso">
+  <button id="btn-save">Salvar Animal</button>
+  <button id="btn-list">Listar Animais</button>
+
+  <ul id="animal-list"></ul>
+
+  <!-- Aqui está a referência correta ao seu arquivo JavaScript -->
+  <script src="script.js" defer></script>
 </body>
 </html>
