--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro de Animais</title>
+  <title>Cadastro Zoonose</title> <!-- Título alterado aqui -->
   <link rel="stylesheet" href="style.css"> <!-- Referência ao seu arquivo CSS -->
+  <script src="script.js" defer></script> <!-- Referência ao seu arquivo JavaScript -->
 </head>
 <body>
   <!-- Seu formulário de cadastro de animais -->
+  <h1>Cadastro Zoonose</h1> <!-- Título na página visível -->
   <input id="input-name" placeholder="Nome do animal">
   <input id="input-breed" placeholder="Raça">
   <input id="input-age" placeholder="Idade">
@@ -17,8 +19,7 @@
   <button id="btn-list">Listar Animais</button>
 
   <ul id="animal-list"></ul>
-
-  <!-- Aqui está a referência correta ao seu arquivo JavaScript -->
   <script src="script.js" defer></script>
+
 </body>
 </html>
